--- a/CSFPOSWare/Properties/Resources.resx
+++ b/CSFPOSWare/Properties/Resources.resx
@@ -117,4 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="coin_P5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coin_P5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonBGBlank" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonBGBlank.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill_100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill_100.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill_20.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coin_P10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coin_P10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill_500" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill_500.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill_1000" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill_1000.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bill_50" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bill_50.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ButtonBGBlankPressed" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ButtonBGBlankPressed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
